trunk/Archive2/87/8a0391e74f8bd0/output
main.cpp: In function 'void printer(Args&& ...)':
main.cpp:4:19: error: expected primary-expression before '...' token
     (std::cout << ... << args) << '\n';
                   ^
main.cpp:4:19: error: expected ')' before '...' token
main.cpp: In instantiation of 'void printer(Args&& ...) [with Args = {int, int, int, const char (&)[4]}]':
main.cpp:8:27:   required from here
main.cpp:3:24: warning: unused parameter 'args#0' [-Wunused-parameter]
 void printer(Args&&... args) {
                        ^
main.cpp:3:24: warning: unused parameter 'args#1' [-Wunused-parameter]
main.cpp:3:24: warning: unused parameter 'args#2' [-Wunused-parameter]
main.cpp:3:24: warning: unused parameter 'args#3' [-Wunused-parameter]
